fix: reorder pilot grid images, align 1st/3rd to top edge

--- a/app/cases/sber/page.module.css
+++ b/app/cases/sber/page.module.css
@@ -185,6 +185,10 @@
   display: block;
 }
 
+.pilotImgTop {
+  object-position: top;
+}
+
 .screenImg {
   height: 100%;
   width: auto;
